Adding the gradle build file, however you'll need to replace the module-path with your own directory value.